# pkcs11-proxy

./: CMakeLists.txt  config.h  flake.nix  gck-rpc-conf.c  gck-rpc-daemon-standalone.c  gck-rpc-dispatch.c  gck-rpc-message.c  gck-rpc-module.c  gck-rpc-util.c  mksyscalls.sh
pkcs11/: pkcs11.h
tools/: p11proxy-mitm
